<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="General Setting of App">
        <CheckBoxPreference
            app:key="@string/policy_key"
            app:title="@string/app_policy_title"
            app:summary="@string/app_policy_summary"
            app:defaultValue="true"/>
        <ListPreference
            app:key="@string/like_key"
            app:title="@string/app_like_title"
            app:entryValues="@array/app_like_entryvalues"
            app:entries="@array/app_like_entries"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/app_like_default"/>
    </PreferenceCategory>
</PreferenceScreen>