<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:icon="@drawable/ic_general"
        app:key="general"
        app:summary="@string/generat_summary"
        app:title="@string/general_title"
        app:useSimpleSummaryProvider="true">
        <intent
            android:targetClass="com.example.qrcode.Settings.General"
            android:targetPackage="com.example.qrcode"></intent>
    </Preference>


    <Preference
        app:icon="@drawable/ic_info"
        app:key="app_info"
        app:summary="@string/about_app_summary"
        app:title="@string/about_app_titlle"
        app:useSimpleSummaryProvider="true">
        <intent
            android:targetClass="com.example.qrcode.Settings.App"
            android:targetPackage="com.example.qrcode"></intent>
    </Preference>


    <Preference
        app:icon="@drawable/ic_user"
        app:key="user"
        app:summary="@string/app_user_summary"
        app:title="@string/app_user_title">
        <intent
            android:targetClass="com.example.qrcode.Settings.User"
            android:targetPackage="com.example.qrcode"></intent>
    </Preference>
</PreferenceScreen>
